Fix: Wrong margins for p inside list item

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1284,3 +1284,7 @@ ul + p > img, ol + p > img {
     margin-left: 16px;
     width: calc(100% - 16px);
 }
+
+li > p:nth-child(n+2) {
+    margin-top: 16px;
+}
